# stomp-rs

./: .gitignore  Cargo.toml  README.md
examples/multi_subscriber/: Cargo.toml
examples/multi_subscriber/src/: main.rs
examples/send_and_subscribe/: Cargo.toml
examples/send_and_subscribe/src/: main.rs
examples/stomp_app/: Cargo.toml  README.md  config.yaml
examples/stomp_app/src/: config.rs  handler.rs  lib.rs  main.rs  service.rs
examples/stomp_app_with_auto_scalling/: Cargo.toml  README.md  config.yaml
examples/stomp_app_with_auto_scalling/src/: autoscaler.rs  config.rs  consumer_pool.rs  handler.rs  lib.rs  main.rs  monitor.rs  runner.rs  scaling.rs  service.rs  utils.rs
src/: codec.rs  frame.rs  header.rs  lib.rs  message_builder.rs  option_setter.rs  session.rs  session_builder.rs  subscription.rs  subscription_builder.rs  transaction.rs
