[package]
authors = ["zslayton <zack.slayton@gmail.com"]
description = "A full STOMP 1.2 client implementation. Allows programs to interact with message queueing services like ActiveMQ and RabbitMQ."
keywords = ["stomp", "mq", "activemq", "rabbitmq", "queue"]
license = "MIT"
name = "stomp"
readme = "README.md"
repository = "https://github.com/zslayton/stomp-rs"
version = "0.13.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
bytes = "1.5"
futures = "0.3"
log = "0.4"
nom = "7.1"
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
unicode-segmentation = "1.10"

[lib]
name = "stomp"
