[package]
name = "multi_subscriber"
version = "0.0.1"
edition = "2021"

[dependencies]
stomp = { path = "../.." }
env_logger = "0.10"
tokio = { version = "1.32", features = ["full", "signal"] }
futures = "0.3"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
