[package]
name = "stomp_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "stomp_app"
path = "src/lib.rs"

[[bin]]
name = "stomp_app"
path = "src/main.rs"

[dependencies]
stomp = { path = "../.." }
tokio = { version = "1.32", features = ["full", "signal"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
